SERVER-23585 Make CanonicalQuery outlive QuerySolutions in unit tests.